--- a/index.html
+++ b/index.html
@@ -5,8 +5,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>俄罗斯方块</title>
+    <style>
+        .page {
+            display: flex;
+        }
+        #game-area{
+            background-color: lightgray;
+            margin-right: 10px;
+        }
+        
+        .buttons {
+            margin-top: 10px;
+            display: flex;
+            justify-content: center;
+            width: 400px;
+        }
+        .btn {
+            margin: 0 5px;
+            width: 80px;
+        }
+    </style>
 </head>
 <body>
-    
+    <div class='page'>
+        <!-- canvas 默认高度 150px, 默认宽度 300px -->
+        <canvas id="game-area" width="400" height="800">请在谷歌浏览器中开始游戏</canvas>
+        <div>
+            <div class='score'>游戏得分：0</div>
+            <div class='level'>游戏等级：0</div>
+        </div>
+    </div>
+    <div class='buttons'>
+        <button class='btn start-btn' onclick="startGame()">start</button>
+        <button class='btn pause-btn'>pause</button>
+    </div>
+    <script src="framework.js"></script>
+    <script src="index.js"></script>
 </body>
 </html>
