--- a/打砖块/index.html
+++ b/打砖块/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>拯救砖块</title>
+  <title>打砖块</title>
   <style>
     #canvas {
       border: 1px solid gray;
@@ -12,6 +12,7 @@
 
   </style>
   <script src="utils.js"></script>
+  <script src="level.js"></script>
   <script src="./game.js"></script>
   <script src="./Paddle.js"></script>
   <script src="./Block.js"></script>
@@ -19,65 +20,23 @@
 </head>
 <body>
   <canvas id="canvas" width="1000" height="500"></canvas>
-
-  <script>
-
-    // 待添加功能：暂停、关卡、调节帧率
-    function main () {
-      var g = Game(40)
-      var paddle = Paddle()
-      var ball = Ball()
-
-      var blocks = []
-      for (let i = 0; i < 4; i++) {
-        let b = Block()
-        b.x = (i + 1) * 150
-        b.y = 100
-        blocks.push(b)
-      }
-      
-      g.update = function () {
-        // 判断相撞
-        if (paddle.collide(ball)) {
-          ball.rebound()
-        }
-        for (let i = 0; i < blocks.length; i++) {
-          let b = blocks[i]
-          if(b.collide(ball)) {
-            console.log('b.collide(ball)', b.collide(ball))
-            b.killed()
-            ball.rebound()
-         }
-        }
-        ball.move()
-      }
-      g.draw = function () {
-        // draw paddle
-        g.drawImg(paddle)
-        // draw ball
-        g.drawImg(ball)
-        // draw blocks
-        for(let i = 0; i < blocks.length; i++) {
-          let b = blocks[i]
-          if (b.alive) {
-            g.drawImg(b)
-          }
-        }
-      }
-      // 注册按键事件
-      g.register ('a', function () {
-        paddle.moveLeft()
-      })
-      g.register ('d', function () {
-        paddle.moveRight()
-      })
-      g.register ('f', function () {
-        ball.fire()
-      })
-    }
-
-    main()
-  </script>
-  
+  <div>
+    球速调节：<input type="range" value='10' min='1' max='60' onmousemove="changeSpeed()" id="speed-contrl">
+  </div>
+  <h3>
+    游戏说明： 
+  </h3>
+  <p>按键 A 左移挡板；<br>按键 D 右移挡板；<br>按键 F 开始发球；<br>空格暂停</p>
+  <p>
+    球速 1-60， 默认10
+  </p>
+  <p>
+    按键 1 进入第一关<br>
+    按键 2 进入第二关<br>
+    按键 3 进入第三关
+  </p>
+ 
+  <!-- 程序入口 -->
+  <script src='./main.js'></script>
 </body>
 </html>
