预加载所有图片，避免相同的图片重复加载

--- a/打砖块/index.html
+++ b/打砖块/index.html
@@ -35,6 +35,9 @@
     按键 2 进入第二关<br>
     按键 3 进入第三关
   </p>
+
+  <!-- 自定义console.log -->
+  <!-- <textarea name="" id="log-area" cols="30" rows="10"></textarea> -->
  
   <!-- 程序入口 -->
   <script src='./main.js'></script>
