--- a/打砖块/index.html
+++ b/打砖块/index.html
@@ -17,6 +17,8 @@
   <script src="./Paddle.js"></script>
   <script src="./Block.js"></script>
   <script src="./Ball.js"></script>
+  <script src="./scene.js"></script>
+  <script src="./scene_end.js"></script>
 </head>
 <body>
   <canvas id="canvas" width="1000" height="500"></canvas>
