--- a/打砖块/index.html
+++ b/打砖块/index.html
@@ -11,31 +11,34 @@
     }
 
   </style>
-  <script src="utils.js"></script>
-  <script src="level.js"></script>
-  <script src="./game.js"></script>
-  <script src="./Paddle.js"></script>
-  <script src="./Block.js"></script>
-  <script src="./Ball.js"></script>
-  <script src="./scene.js"></script>
-  <script src="./scene_end.js"></script>
+  <script src="utils/utils.js"></script>
+  <script src="material/level.js"></script>
+  <script src="material/game.js"></script>
+  <script src="material/Paddle.js"></script>
+  <script src="material/Block.js"></script>
+  <script src="material/Ball.js"></script>
+  <script src="scene/main.js"></script>
+  <script src="scene/title.js"></script>
+  <script src="scene/end.js"></script>
+  <script src="scene/start.js"></script>
 </head>
 <body>
   <canvas id="canvas" width="1000" height="500"></canvas>
   <div>
-    球速调节：<input type="range" value='10' min='1' max='60' onmousemove="changeSpeed()" id="speed-contrl">
+    球速调节：<input type="range" value='20' min='10' max='60' onmousemove="changeSpeed()" id="speed-contrl">
+    <p>
+      球速 1-60， 默认20
+    </p>
   </div>
   <h3>
     游戏说明： 
   </h3>
-  <p>按键 A 左移挡板；<br>按键 D 右移挡板；<br>按键 F 开始发球；<br>空格暂停</p>
+  <p>开始发球: 按键 F<br>左移挡板: 按键 A ；<br>右移挡板: 按键 D；<br>暂停游戏：空格键</p>
+ 
   <p>
-    球速 1-60， 默认10
-  </p>
-  <p>
-    按键 1 进入第一关<br>
-    按键 2 进入第二关<br>
-    按键 3 进入第三关
+    第1关：按键 1 <br>
+    第2关：按键 2 <br>
+    第3关：按键 3 <br>
   </p>
 
   <!-- 自定义console.log -->
