--- a/打砖块/index.html
+++ b/打砖块/index.html
@@ -11,12 +11,16 @@
     }
 
   </style>
+  <!-- 工具函数 -->
   <script src="utils/utils.js"></script>
+  <!-- 游戏关卡 -->
   <script src="material/level.js"></script>
+  <!-- 游戏及元素相关文件 -->
   <script src="material/game.js"></script>
   <script src="material/Paddle.js"></script>
   <script src="material/Block.js"></script>
   <script src="material/Ball.js"></script>
+  <!-- 游戏场景 -->
   <script src="scene/main.js"></script>
   <script src="scene/title.js"></script>
   <script src="scene/end.js"></script>
@@ -33,7 +37,7 @@
   <h3>
     游戏说明： 
   </h3>
-  <p>开始发球: 按键 F<br>左移挡板: 按键 A ；<br>右移挡板: 按键 D；<br>暂停游戏：空格键</p>
+  <p>开始发球: 按键 f<br>左移挡板: 按键 a ；<br>右移挡板: 按键 d；<br>暂停游戏：空格键</p>
  
   <p>
     第1关：按键 1 <br>
