重构game.js和main.js

--- a/打砖块/index.html
+++ b/打砖块/index.html
@@ -48,6 +48,9 @@
   <!-- 自定义console.log -->
   <!-- <textarea name="" id="log-area" cols="30" rows="10"></textarea> -->
  
+  <script>
+    
+  </script>
   <!-- 程序入口 -->
   <script src='./main.js'></script>
 </body>
