素材 + 抽象类

--- a/飞行射击/index.html
+++ b/飞行射击/index.html
@@ -4,8 +4,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>打砖块</title>
+  <title>飞行射击游戏</title>
   <style>
+
+
+
     #canvas {
       border: 1px solid gray;
     }
@@ -17,9 +20,10 @@
   <script src="material/level.js"></script>
   <!-- 游戏及元素相关文件 -->
   <script src="material/game.js"></script>
-  <script src="material/Paddle.js"></script>
-  <script src="material/Block.js"></script>
-  <script src="material/Ball.js"></script>
+  <script src="material/GameMaterial.js"></script>
+  <script src="material/Player.js"></script>
+  <script src="material/Cloud.js"></script>
+  <script src="material/Enemy.js"></script>
   <!-- 游戏场景 -->
   <script src="scene/main.js"></script>
   <script src="scene/title.js"></script>
@@ -27,23 +31,18 @@
   <script src="scene/start.js"></script>
 </head>
 <body>
-  <canvas id="canvas" width="1000" height="500"></canvas>
-  <div>
+  <canvas id="canvas" width="400" height="800"></canvas>
+  <!-- <div>
     球速调节：<input type="range" value='20' min='10' max='60' onmousemove="changeSpeed()" id="speed-contrl">
     <p>
       球速 1-60， 默认20
     </p>
-  </div>
+  </div> -->
   <h3>
     游戏说明： 
   </h3>
-  <p>开始发球: 按键 f<br>左移挡板: 按键 a ；<br>右移挡板: 按键 d；<br>暂停游戏：空格键</p>
+  <!-- <p>开始发球: 按键 f<br>左移挡板: 按键 a ；<br>右移挡板: 按键 d；<br>暂停游戏：空格键</p> -->
  
-  <p>
-    第1关：按键 1 <br>
-    第2关：按键 2 <br>
-    第3关：按键 3 <br>
-  </p>
 
   <!-- 自定义console.log -->
   <!-- <textarea name="" id="log-area" cols="30" rows="10"></textarea> -->
