--- a/飞行射击/index.html
+++ b/飞行射击/index.html
@@ -21,6 +21,7 @@
   <!-- 游戏及元素相关文件 -->
   <script src="material/game.js"></script>
   <script src="material/GameMaterial.js"></script>
+  <script src="material/Bullet.js"></script>
   <script src="material/Player.js"></script>
   <script src="material/Cloud.js"></script>
   <script src="material/Enemy.js"></script>
@@ -31,7 +32,7 @@
   <script src="scene/start.js"></script>
 </head>
 <body>
-  <canvas id="canvas" width="400" height="800"></canvas>
+  <canvas id="canvas" width="400" height="700"></canvas>
   <!-- <div>
     球速调节：<input type="range" value='20' min='10' max='60' onmousemove="changeSpeed()" id="speed-contrl">
     <p>
