游戏封面 +  粒子系统

--- a/飞行射击/index.html
+++ b/飞行射击/index.html
@@ -12,7 +12,9 @@
     #canvas {
       border: 1px solid gray;
     }
-
+    .hidden {
+      display: none;
+    }
   </style>
   <!-- 工具函数 -->
   <script src="config.js"></script>
@@ -22,6 +24,7 @@
   <!-- 游戏及元素相关文件 -->
   <script src="material/game.js"></script>
   <script src="material/GameMaterial.js"></script>
+  <script src="material/particleSystem.js"></script>
   <script src="material/Bullet.js"></script>
   <script src="material/Player.js"></script>
   <script src="material/Cloud.js"></script>
@@ -34,13 +37,22 @@
 </head>
 <body>
   <canvas id="canvas" width="400" height="700"></canvas>
-  <div>
-    玩家速度：<input type="range" value='10' min='10' max='60' data-speed="player_speed" onchange="changeSpeed(event)">
+
+  <div class='desc hidden'>
+    <div>
+      <p>游戏说明：</p>
+      <p>上下左右键：w,s,a,d</p>
+      <p>开火：f</p>
+    </div>
+    <div>
+      玩家速度：<input type="range" value='10' min='10' max='60' data-speed="player_speed" onchange="changeSpeed(event)">
+    </div>
+    <div>
+      子弹速度：<input type="range" value='5' min='5' max='60' data-speed="bullet_speed" onchange="changeSpeed(event)">
+    </div>
   </div>
-  <div>
-    子弹速度：<input type="range" value='5' min='5' max='60' data-speed="bullet_speed" onchange="changeSpeed(event)">
-  </div>
- 
+
+  
  
 
   <!-- 自定义console.log -->
