add bomb + end scene

--- a/飞行射击/index.html
+++ b/飞行射击/index.html
@@ -24,6 +24,7 @@
   <!-- 游戏及元素相关文件 -->
   <script src="material/game.js"></script>
   <script src="material/GameMaterial.js"></script>
+  <script src="material/Bomb.js"></script>
   <script src="material/particleSystem.js"></script>
   <script src="material/Bullet.js"></script>
   <script src="material/Player.js"></script>
