--- a/愤怒的小鸟/index.html
+++ b/愤怒的小鸟/index.html
@@ -29,6 +29,7 @@
   <script src="material/MyAnimation.js"></script>
   <script src="material/WolkingAnimation.js"></script>
   <script src="material/Ground.js"></script>
+  <script src="material/Pipe.js"></script>
   <script src="material/BirdsAnimation.js"></script>
   <script src="material/particleSystem.js"></script>
   <script src="material/Bullet.js"></script>
