--- a/mario/mario.html
+++ b/mario/mario.html
@@ -11,6 +11,8 @@
   <h3 class="bit-offset"></h3>
   <div class="controler">
     <button data-offset="1024" data-action="changeOffset">+1024</button>
+    <button data-offset="16" data-action="changeOffset">+16</button>
+    <button data-offset="-16" data-action="changeOffset">-16</button>
     <button data-offset="-1024" data-action="changeOffset">-1024</button>
   </div>
   <canvas id="canvas" width="640" height="640"></canvas>
