开始和结束场景完善

--- a/马里奥/index.html
+++ b/马里奥/index.html
@@ -38,14 +38,14 @@
   <script src="material/Enemy.js"></script>
   <!-- 游戏场景 -->
   <script src="scene/main.js"></script>
-  <script src="scene/start.js"></script>
   <script src="scene/title.js"></script>
   <script src="scene/end.js"></script>
+  <script src="scene/start.js"></script>
 </head>
 <body>
   <canvas id="canvas" width="400" height="700"></canvas>
 
-  <div class='desc hidden'>
+  <div class='desc'>
     <div>
       <p>游戏说明：</p>
       <p>左右移动小鸟：a, d 键</p>
